@@ -1,4 +1,6 @@
-20.oct (db)
+20.oct (ws)
+      - updated instruments.xml from Magnus Johansson
+      (db)
       - remove the "All files" option from "Choose Instruments List"
       - correct misspelling in en_US
 	(la)
